# AI_forex_forecast_api

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
utils/: preprocess.py
