[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ayodimeji <ayodimejia1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
